Fixed problems and added documentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
-# http://www.gnu.org/software/automake
-
 *~
 *.o
-*.d
+
+\#*
+.\#*
+
+Makefile
+autom4te.cache/
+config.h
+config.log
+config.status
+libtool
+stamp-h1
+.deps
+
+*.la
+*.lo
+.libs/
+*.log
+
+Makefile.in
+aclocal.m4
+build-aux/
+config.h.in
+configure
